Fixed navbar button trigger and Project spacing
fixed a couple bugs that needed fixing after deployment

--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -10,7 +10,6 @@
   max-width: 365px;
   height: 710px; 
   margin-right: 100px;
-  margin-left: 100px;
 }
 
 .image {
